; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/wusbcore/extr_devconnect.c_wusbhc_devconnect_create.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/wusbcore/extr_devconnect.c_wusbhc_devconnect_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wusbhc = type { i32, %struct.TYPE_8__, i32, %struct.TYPE_6__ }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }

@WUIE_ID_KEEP_ALIVE = common dso_local global i32 0, align 4
@wusbhc_keep_alive_run = common dso_local global i32 0, align 4
@WUIE_ID_CONNECTACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wusbhc_devconnect_create(%struct.wusbhc* %0) #0 {
  %2 = alloca %struct.wusbhc*, align 8
  store %struct.wusbhc* %0, %struct.wusbhc** %2, align 8
  %3 = load i32, i32* @WUIE_ID_KEEP_ALIVE, align 4
  %4 = load %struct.wusbhc*, %struct.wusbhc** %2, align 8
  %5 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %4, i32 0, i32 3
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  store i32 %3, i32* %7, align 4
  %8 = load %struct.wusbhc*, %struct.wusbhc** %2, align 8
  %9 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %8, i32 0, i32 3
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i32 8, i32* %11, align 4
  %12 = load %struct.wusbhc*, %struct.wusbhc** %2, align 8
  %13 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %12, i32 0, i32 2
  %14 = load i32, i32* @wusbhc_keep_alive_run, align 4
  %15 = call i32 @INIT_DELAYED_WORK(i32* %13, i32 %14)
  %16 = load i32, i32* @WUIE_ID_CONNECTACK, align 4
  %17 = load %struct.wusbhc*, %struct.wusbhc** %2, align 8
  %18 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  store i32 %16, i32* %20, align 4
  %21 = load %struct.wusbhc*, %struct.wusbhc** %2, align 8
  %22 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  store i32 8, i32* %24, align 4
  %25 = load %struct.wusbhc*, %struct.wusbhc** %2, align 8
  %26 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %25, i32 0, i32 0
  %27 = call i32 @INIT_LIST_HEAD(i32* %26)
  ret i32 0
}

declare dso_local i32 @INIT_DELAYED_WORK(i32*, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
